# agent-eval-harness

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  system_architecture.md
.github/workflows/: evals.yml
agent/: llm.py  main.py  schemas.py  tools.py
agent/prompts/: triage_v1.md
data/fixtures/: mock_responses.jsonl  orders.json  refund_policy.md
data/golden/: ROW_AUTHORING.md  adversarial.jsonl  edge_cases.jsonl  standard.jsonl
data/judge_validation/: LABELING_INSTRUCTIONS.md  labeled_replies.jsonl  labeled_replies.manual.jsonl  labeling_sheet.csv  labeling_sheet.jsonl
evals/: build_validation_set.py  deterministic.py  judge.py  run_evals.py  taxonomy.md  validate_judge.py
evals/rubrics/: reply_quality.md
results/judge_runs/: 20260713T141303_mock-openai.json  20260714T140104_mock-openai.json
results/runs/: 20260713T144151_openai.json  20260713T144233_mock.json
tests/: test_ascii.py  test_stdout_hardening.py
